code/Blazor/deployment-webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2022-05-01T20:31:23Z","generation":1,"name":"webapi","namespace":"devdays","resourceVersion":"9706","uid":"9d066527-4cff-4da6-8951-5eceaf5e8a56"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"webapi"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"}, [...]
  creationTimestamp: "2022-05-01T20:31:23Z"
  generation: 2
  name: webapi
  namespace: devdays
  resourceVersion: "181524"
  uid: 9d066527-4cff-4da6-8951-5eceaf5e8a56
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapi
    spec:
      containers:
      - image: devdayseurope.azurecr.io/webapi:latest
        imagePullPolicy: Always
        name: webapi
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-05-01T20:31:23Z"
    lastUpdateTime: "2022-05-01T20:31:26Z"
    message: ReplicaSet "webapi-78c8b945f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-05-02T09:03:34Z"
    lastUpdateTime: "2022-05-02T09:03:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
